# findingmodel

./: .env.sample  .gitignore  .markdownlint.jsonc  .mcp.json  CHANGELOG.md  CLAUDE.md  PROJECT_INDEX.json  README.md  Taskfile.yml  opencode.json  pyproject.toml
.claude/: settings.json
.claude/agents/: ai-test-eval-implementer.md  ai-test-evaluator.md  ai-test-implementer.md  code-refactoring-analyzer.md  documentation-updater.md  plan-orchestrator.md  pydantic-ai-evaluator.md  pydantic-ai-implementer.md  python-core-evaluator.md  python-core-implementer.md  python-test-evaluator.md  python-test-implementer.md  reviewer.md
.claude/commands/: implement-plan.md  release.md  review-plan.md  update_docs.md
.claude/rules/: anatomic-locations.md  findingmodel-ai.md  findingmodel.md  index-duckdb.md  oidm-common.md  oidm-maintenance.md
.codex/: config.toml
.github/: copilot-instructions.md
.github/prompts/: implement-plan.prompt.md  review-plan.prompt.md
.serena/: project.yml
.serena/memories/: agent_evaluation_best_practices_2025.md  ai_assistant_usage_2025.md  anatomic_location_search_implementation.md  api_integration.md  bioontology_integration_2025.md  code_style_conventions.md  documentation_corrections_2025.md  duckdb_architecture.md  duckdb_development_patterns.md  duckdb_hybrid_search_research_2025.md  evaluator_architecture_2025.md  index_duckdb_logging_2025.md  index_duckdb_migration_decisions_2025.md  index_duckdb_migration_final_schema_2025.md  index_duckdb_migration_status_2025.md  instruction_files_plan_2025.md  logfire_observability_2025.md  memory_index.md  model_configuration_architecture_2025.md  model_editing_guardrails_2025-09-26.md  model_editing_guardrails_2025.md  multi_agent_orchestration_system_2025.md  ontology_concept_search_refactoring.md  ontology_search_architecture.md  ontology_search_optimizations_2025.md  project_overview.md  project_state_january_2025.md  protocol_based_architecture_2025.md  pydantic_ai_best_practices.md  pydantic_ai_best_practices_2025_09.md  pydantic_ai_testing_best_practices.md  pytest_fixtures_reference_2025.md  suggested_commands.md  task_completion_checklist.md  test_suite_improvements_2025.md
.specify/memory/: constitution.md
docs/: agent-performance-audit-2026-03.md  anatomic-locations.md  canonical-structured-metadata-and-enrichment-rewrite.md  configuration.md  database-management.md  duckdb-development.md  enrichment-pipeline-optimization-proposal.md  evaluation_guide.md  example-enhanced-abdominal_aortic_aneurysm.fm.json  finding-enrichment-implementation-plan.md  finding-enrichment-prd.md  finding-model-metadata-fields.md  gold-standard-review.md  logfire_observability_guide.md  manifest_schema.md  mcp_server.md  proposed-prompt-examples.md  rsna-subspecialty-codes.md
docs/archive/: enrichment-pipeline-optimization-proposal.md  finding-enrichment-implementation-plan.md  finding-enrichment-prd.md
docs/database-schemas/: finding_models_legacy_2026-01-28.schema.json
docs/plans/: claude-agents-review-2026-03-19.md  (+14 more)
evals/: CLAUDE.md  README.md  __init__.py  anatomic_search.py  base.py  evals_guide.md  finding_description.py  markdown_in.py  model_editor.py  ontology_match.py  similar_models.py  utils.py
examples/: claude_desktop_config.json
notebooks/: demo_anatomic_location_search.py  demo_bioontology_search.py  demo_edit_finding_model.py  demo_edit_model_from_command.py  demo_edit_model_from_markdown.py  demo_find_similar.py  demo_ontology_concept_match.py  demo_ontology_concept_search.py  findingmodel_index.ipynb  findingmodel_repo.ipynb  findingmodel_search_repo.ipynb  findingmodel_tools.html  findingmodel_tools.ipynb  migrate_anatomic_to_duckdb.py  test_find_similar.py
scripts/: agent_audit.py  anatomic_location_search.py  benchmark_models.py  check_anatomic_embeddings.py  enrich_finding.py  enrich_findings_batch.py  ipl_finding_models.json  make_md.py  release.py  test_unified_enrichment.py  verify-install.py
tasks/: STATUS.md  agent_refactoring_plan.md  anatomic-hierarchy-aware-related-models.md  anatomic-location-cleanup.md  anatomic-location-search-implementation-plan.md  anatomic-locations-CLAUDE.md  anatomic-locations-copilot-instructions.md  anatomic-locations-graph-research.md  anatomic-locations-normalized-schema.md  anatomic-locations-package-plan.md  bioontology-oidm-common-plan.md  canonical-structured-metadata-implementation-plan.md  claude-subagents-modernization-and-skill-portability-plan.md  code_review.md  config_toml_settings_plan.md  database_distribution_enhancements.md  deferred_to_0_5_1.md  documentation-updates.md  drive_to_041.md  duckdb-common-patterns.md  expand_agent_eval_coverage.md  facets-implementation-plan.md  finding_info_generation_rework_prd.md  findingmodel-facets.md  index-duckdb-migration.md  index_api_enhancements_plan.md  issues-to-submit-for-immediate-fix-post-merge.md  logging_rationalization.md  markdown-output-overhaul-plan.md  model-configuration-expansion.md  monorepo-plan-overview.md  monorepo-restructure-plan.md  monorepo-restructure-plan.md.OLD  oidm-common-CLAUDE.md  oidm-common-copilot-instructions.md  oidm-common-package-plan.md  oidm-package-restructuring.md  pending-fixes.md  pending_ty_upgrade.md  pre-merge-release-punchlist.md  (+8 more)
test/: conftest.py  test_anatomic_index.py  test_anatomic_index_db.py  test_anatomic_location_search.py  test_anatomic_locations.py  test_anatomic_migration_db.py  test_anatomic_models.py  test_base_evaluators.py  test_cli.py  test_cli_index.py  test_config.py  test_contributor.py  test_db_publish.py  test_duckdb_index.py  test_duckdb_utils.py  test_embedding_cache.py  test_finding_enrichment.py  test_findingmodel.py  test_findingmodel_md.py  test_index.py  test_index_mongodb.py  test_index_validation.py  test_manifest_integration.py  test_mcp_server.py  test_model_editor.py  test_models.py  test_ontology_concept_match.py  test_ontology_concept_search.py  test_ontology_search.py  test_pooch_integration.py  test_remote_resource.py  test_repo.py  test_search_repo.py  test_tools.py  test_web_reference.py
(+128 files in other folders)
