[project]
name = "findingmodel-workspace"
version = "0.0.0"
description = "Workspace root for OIDM packages"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.2",
    "jupyter>=1.1.1",
    "logfire[httpx]>=1.0.0",
    "pydantic-evals>=0.1.0",
    "go-task-bin>=3.43.3",
]

# Shared tool configuration

[tool.ruff]
line-length = 120
extend-exclude = ["__pycache__", ".venv", "dist"]
preview = true
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "I",   # isort
    "ANN", # type annotations
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "RUF", # ruff
]
fixable = ["ALL"]
unfixable = []
ignore = [
    "BLE001",    # blind except Exception — intentional in eval/error-handling code
    "S110",      # try-except-pass — intentional silencing in some patterns
    "RUF069",    # float equality — exact 0.0/1.0 comparisons in tests are fine
    "ASYNC230",  # async file I/O — not applicable to our sync DuckDB patterns
    "DTZ005",    # timezone-naive datetime.now() — acceptable for local timestamps
    "DTZ011",    # timezone-naive datetime.date.today() — acceptable for local dates
    "TRY004",    # prefer TypeError — too prescriptive for our use cases
    "PYI034",    # __enter__ return Self — stdlib compat
    "PYI036",    # __exit__ annotation — stdlib compat
    "EXE001",    # shebang on non-executable — false positives
    "PIE810",    # single startswith/endswith — readability preference
    "PERF102",   # dict .keys() iteration — readability preference
    "PLC0206",   # dict iteration without .items() — readability preference
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["ANN401"]  # Allow Any type in test files for mock functions
"**/evals/**/*.py" = ["ANN401"]  # Allow Any type in eval files
"**/__init__.py" = ["RUF067"]  # Allow version extraction, logger config, helper functions in __init__

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Session-scoped test loop prevents google-genai SDK's async httpx connections from
# triggering "Event loop is closed" errors during loop teardown between modules.
# See: https://github.com/googleapis/python-genai/issues/1709
asyncio_default_test_loop_scope = "session"
# Note: testpaths not set - use per-package test tasks instead (task test:oidm-common, etc.)
# This avoids conftest.py collisions when running tests across multiple packages
markers = [
    "callout: Marks test as calling on non-local services",
]
filterwarnings = [
    # Filter out our own deprecation warnings from the tools module
    "ignore:.*is deprecated, use.*instead:DeprecationWarning",
    # Ignore pydantic-ai OpenAIModel deprecation warning
    "ignore:`OpenAIModel` was renamed to `OpenAIChatModel`:DeprecationWarning",
]
tmp_path_retention_policy = "failed"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
files = [
    "packages/oidm-common/src/oidm_common",
    "packages/anatomic-locations/src/anatomic_locations",
    "packages/findingmodel/src/findingmodel",
    "packages/findingmodel-ai/src/findingmodel_ai",
    "packages/findingmodel-ai/scripts",
    "packages/oidm-maintenance/src/oidm_maintenance",
]
